Adding URI retrieve utils for testing proxy settings